# IS-course-work

./: NN.h5  README.md  client.py  course_work.ipynb  data_prepare_agent.py  failure_estimation_agent.py  pyproject.toml  sensors.csv  server.py
