[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_work"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.1"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
